--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 </head>
 
 <body>
-  <div class="title">MemoryGame</div>
-  <div class="timer"></div>
+  <div class="side-bar">
+    <span class="title">MemoryGame</span>
+    <span class="timer"></span>
+    <span class="message">age</span>
+  </div>
+
   <div class="cardsArea"></div>
 </body>
 <script src="script.js"></script>
