--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-  <div class="side-bar">
+  <div class="infos">
     <span class="title">MemoryGame</span>
     <span class="timer"></span>
-    <span class="message">age</span>
+    <span class="message"></span>
   </div>
 
   <div class="cardsArea"></div>
