--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-  <div class="infos">
-    <span class="title">MemoryGame</span>
-    <span class="timer"></span>
+  <div class="sideBar">
+    <span class="title">Memory<br>Game</span>
+    <span class="timeText"></span>
     <span class="message"></span>
   </div>
 
