--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <div class="sideBar">
     <span class="title">Memory<br>Game</span>
     <span class="timeText"></span>
-    <span class="message"></span>
+    <span class="levelText"></span>
   </div>
 
-  <div class="cardsArea"></div>
+  <div class="gameArea"></div>
 </body>
 <script src="script.js"></script>
 
