--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <span class="levelText"></span>
   </div>
 
-  <div class="gameArea"></div>
+  <div class="gameArea"><button class="startButton">START</button></div>
 </body>
 <script src="script.js"></script>
 
