--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <span class="title">Memory<br>Game</span>
     <span class="timeText"></span>
     <span class="levelText"></span>
+    <span class="levelButtons">
+      <button class="prevLevelButton">prev</button>
+      <button class="nextLevelButton">next</button>
+    </span>
   </div>
 
   <div class="gameArea"><button class="startButton">START</button></div>
